Page Title Correction in Hall Of Fame

--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Enrollment Form | Next School</title>
+    <title>Hall Of Fame | Next School</title>
 </head>
 
 <body>
