Sponsors Bug Fixed, Study Material Bug Fixed, Login Page will open in New Page

--- a/sponsors.html
+++ b/sponsors.html
@@ -119,7 +119,8 @@
                         <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
                     </li>
                 </ul>
-                <a href="#" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i> LogIn</a>
+                <a href="#" target="_blank" id="login-btn" class="d-flex btn btn-dark"><i
+                        class="fas fa-sign-in-alt"></i> LogIn</a>
             </div>
         </div>
     </nav>
@@ -162,34 +163,34 @@
     <section id="sponsors">
         <div class="container">
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-1.jpg" alt="" />
+                <img src="./images/sponsor-1.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-2.jpg" alt="" />
+                <img src="./images/sponsor-2.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-3.jpg" alt="" />
+                <img src="./images/sponsor-3.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-4.jpg" alt="" />
+                <img src="./images/sponsor-4.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-5.jpg" alt="" />
+                <img src="./images/sponsor-5.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-6.jpg" alt="" />
+                <img src="./images/sponsor-6.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-7.jpg" alt="" />
+                <img src="./images/sponsor-7.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-8.jpg" alt="" />
+                <img src="./images/sponsor-8.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-9.jpg" alt="" />
+                <img src="./images/sponsor-9.jpg" alt="" />
             </div>
             <div class="sponsors-item">
-                <img src="https://schoolmanagement.co.za/sms/public/frontend/content/img/sponsor-10.jpg" alt="" />
+                <img src="./images/sponsor-10.jpg" alt="" />
             </div>
         </div>
     </section>
