--- a/study-material.html
+++ b/study-material.html
@@ -119,7 +119,8 @@
                         <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
                     </li>
                 </ul>
-                <a href="#" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i> LogIn</a>
+                <a href="#" target="_blank" id="login-btn" class="d-flex btn btn-dark"><i
+                        class="fas fa-sign-in-alt"></i> LogIn</a>
             </div>
         </div>
     </nav>
@@ -179,31 +180,31 @@
                 <ul>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB1%20PRINT%20Afrikaans.pdf?ver=2017-09-10-142100-000"
-                            target="_black">Book 1</a>
+                            target="_blank">Book 1</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB2%20PRINT%20Afrikaans.pdf?ver=2017-09-10-142144-000"
-                            target="_black">Book 2</a>
+                            target="_blank">Book 2</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB3%20PRINT%20Afrikaans.pdf?ver=2017-09-10-142240-000"
-                            target="_black">Book 3</a>
+                            target="_blank">Book 3</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB4%20PRINT%20Afrikaans3.pdf?ver=2017-10-09-173232-000"
-                            target="_black">Book 4</a>
+                            target="_blank">Book 4</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB5%20PRINT%20Afrikaans.pdf?ver=2017-09-10-142438-000"
-                            target="_black">Book 5</a>
+                            target="_blank">Book 5</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB6%20PRINT%20Afrikaans.pdf?ver=2017-09-10-142534-000"
-                            target="_black">Book 6</a>
+                            target="_blank">Book 6</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB7%20PRINT%20Afrikaans2.pdf?ver=2017-09-11-230850-000"
-                            target="_black">Book 7</a>
+                            target="_blank">Book 7</a>
                     </li>
                     <li>
                         <a href="https://www.education.gov.za/Portals/0/Documents/Publications/FP%20Stories/Big%20Books/Grade%201/Afrikaans/LowRESHL_Gr01_BB8_PRINT_Afrikaans.pdf?ver=2017-09-10-142640-000"
