--- a/gallery.html
+++ b/gallery.html
@@ -122,7 +122,8 @@
                         <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
                     </li>
                 </ul>
-                <a href="#" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i> LogIn</a>
+                <a href="#" target="_blank" id="login-btn" class="d-flex btn btn-dark"><i
+                        class="fas fa-sign-in-alt"></i> LogIn</a>
             </div>
         </div>
     </nav>
