--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -20,6 +20,11 @@
 
     <link rel="stylesheet" href="./css/style.css" />
 
+
+    <style>
+
+    </style>
+
     <title>Hall Of Fame | Next School</title>
 </head>
 
