Change Implemented In Enrollment, Donate

--- a/donate-us.html
+++ b/donate-us.html
@@ -144,7 +144,7 @@
 
   <section id="page-heading" data-page="donate-us">
     <div class="container">
-      <h1><i class="fas fa-hand-holding-heart"></i> Donate to our Trust</h1>
+      <h1><i class="fas fa-hand-holding-heart"></i> Sponsor our school</h1>
     </div>
   </section>
 
@@ -165,11 +165,16 @@
   <section id="donation-form" class="mb-4">
     <div class="container">
 
-      <p>Donate for the education of poor children and support them with necessities like tuition fees, school supplies,
-        footwear, transport, etc. Help them build a future that will make them escape poverty passed from generation to
-        generation.
+      <p>Please help bridge the socio-economic and digital divide between public schooling
+        and
+        private schooling by
+        empowering
+        our school with digital tools and digital capabilities. We seek Public-Private partnerships from Alumni and
+        Corporates
+        alike. Corporate Social Responsibility Initiatives of digitizing schools, inspiring learners, creating jobs, and
+        impacting lives even in remote locations. <br> Thank you.
       </p>
-      <p class="mb-3"><strong>please, let us know who are donating to our firm</strong></p>
+      <p class="mb-3"><strong>Please, let us know who is uplifting our school?</strong></p>
       <div class="row mb-4">
 
         <div class="col-md-4 mb-2">
@@ -461,13 +466,14 @@
         </div>
 
         <div class="col-12 mb-2 mt-3">
-          <label for="message" class="form-label"><i class="fas fa-message"></i> Donation Message</label>
+          <label for="message" class="form-label"><i class="fas fa-message"></i> We look forward to your
+            message...</label>
           <textarea class="form-control" rows="3">Enter Your Message Here...</textarea>
         </div>
 
         <div class="col-md-6 mb-2">
           <label for="amount" class="form-label"><i class="fas fa-coins"></i>Donation Amount*</label>
-          <input type="number" class="form-control" placeholder="Enter Amount">
+          <input type="text" class="form-control" placeholder="Enter Amount">
         </div>
 
       </div>
