Footer Changed and Header is Fixed Now

--- a/study-material.html
+++ b/study-material.html
@@ -34,7 +34,7 @@
 
    -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-nav">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" id="main-nav">
 
         <div class="container">
 
@@ -2985,24 +2985,57 @@
 
 
 
-    <!-- 
-    
-    ====================
-    ====================
+    <section id="footer">
 
-      Footer
+        <div class="top-footer">
 
-    ====================
-    ====================
+            <div class="container">
+                <div class="footer-col">
+                    <img src="./images/brand.png" alt="brand Image">
+                    <div>
+                        <a href="#"><img src="./images/google.svg" alt=""></a>
+                        <a href="#"><img src="./images/apple.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h2><i class="fas fa-contact-book"></i> Contact Us</h2>
+                    <ul>
+                        <li><a href="mailto:info@nextschool.co.za">info@nextschool.co.za</a></li>
+                        <li><a href="tel:+27-737878798">+27-737878798</a></li>
+                    </ul>
+                    <ul>
+                        <li>Office hours: 09:00 AM to 06:00 PM</li>
+                        <li>Monday to Friday</li>
+                    </ul>
+                    <h2 class="mt-3"><i class="fas fa-location-dot"></i> GPS Coordinates</h2>
+                    <ul>
+                        <li>26’08’47.16″S</li>
+                        <li>28’02’44.64″E</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h2><i class="fas fa-map-location-dot"></i> Physical Address</h2>
+                    <ul>
+                        <li>3350</li>
+                        <li>Phandamashango Street</li>
+                        <li>Tshiawelo Ext.</li>
+                        <li>Soweto, PO Box 118 Tshiawelo 1818</li>
+                        <li>Johannesburg</li>
+                    </ul>
 
-  -->
+                    <button class="button" onclick="window.location.href = './donate-us.html'">
+                        <i class="fas fa-hand-holding-heart"></i> Sponsor Our School
+                        <div class="button__horizontal"></div>
+                        <div class="button__vertical"></div>
+                    </button>
+                </div>
+            </div>
+        </div>
 
-    <footer id="top-footer" class="bg-light">
+        <div class="middle-footer">
+            <div class="container">
 
-        <div class="container-fluid">
-
-            <div class="social-media-footer">
-                <ul>
+                <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-google"></i></a></li>
@@ -3010,65 +3043,38 @@
                     <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="#"><i class="fab fa-github"></i></a></li>
                 </ul>
-            </div>
 
+                <ul class="footer-menu">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about-us.html">About</a></li>
+                    <li><a href="./enrollment-form.html">Apply</a></li>
+                    <li><a href="./news.html">News</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./study-material.html">Study Material</a></li>
+                    <li><a href="./gallery.html">Media</a></li>
+                    <li><a href="./sponsors.html">Sponsors</a></li>
+                    <li><a href="./alumni.html">Alumni</a></li>
+                </ul>
+
+                <p>By accessing, using and/or interacting with NextSchool via its online and/or electronic platforms
+                    such as
+                    its
+                    website and
+                    application, you consent to the processing of your personal information by NextSchool.
+                    The Processing
+                    of personal
+                    information will be done in accordance with its POPI Policy.  Should you not consent, you must cease
+                    your
+                    interaction
+                    with NextSchool on any and every platform.</p>
+            </div>
         </div>
-    </footer>
-
-    <footer id="main-footer" class="bg-light">
-        <div class="container-fluid">
-
-            <div>
-                <img src="./images/brand.png" alt="brand-image">
-                <a href="" class="btn btn-dark"><i class="fas fa-download"></i> Download App</a>
+        <div class="bottom-footer">
+            <div class="container">
+                <p>Copyright &copy; 2021, NextSchool. <small>All rights reserved.</small></p>
             </div>
-
-            <div>
-                <h2>Departments</h2>
-                <ul>
-                    <li><a href="#">Academics</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Career</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>School Policies</h2>
-                <ul>
-                    <li><a href="#">Help & Supports</a></li>
-                    <li><a href="#">Counselling</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Exam Policies</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>About Our System</h2>
-                <ul>
-                    <li><a href="#">Infrastructure</a></li>
-                    <li><a href="#">Business</a></li>
-                    <li><a href="#">Branches</a></li>
-                    <li><a href="#">Sponsors</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Explore Services</h2>
-                <ul>
-                    <li><a href="#">Counselling</a></li>
-                    <li><a href="#">Libraries</a></li>
-                    <li><a href="#">Seminars</a></li>
-                    <li><a href="#">Books</a></li>
-                </ul>
-            </div>
-
         </div>
-    </footer>
-
-    <footer id="bottom-footer">
-        <p>Copyright &copy; 2021, NextSchool.
-            <span>All rights reserved</span>
-        </p>
-    </footer>
-
+    </section>
 
 
 
