--- a/alumni_reg.html
+++ b/alumni_reg.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Additional Meta Tags -->
-    <meta name="theme-color" content="#3459e6" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Bootstrap 5 CSS -->
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/5/zephyr/bootstrap.min.css"
-    />
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#3459e6" />
 
-    <!-- Font Awesome 6 CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    />
+  <!-- Bootstrap 5 CSS -->
+  <link rel="stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+  <!-- Font Awesome 6 CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
 
-    <title>Enrollment Form | Next School</title>
-  </head>
+  <link rel="stylesheet" href="./css/style.css" />
 
-  <body>
-    <!-- 
+  <title>Enrollment Form | Next School</title>
+</head>
+
+<body>
+  <!-- 
 
     ====================
     ====================
@@ -38,160 +33,101 @@
 
    -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-nav">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <img
-            id="brand-img"
-            class="img-fluid"
-            src="./images/brand.png"
-            alt="brand-img"
-          />
-        </a>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" id="main-nav">
+    <div class="container">
+      <a class="navbar-brand" href="./index.html">
+        <img id="brand-img" class="img-fluid" src="./images/brand.png" alt="brand-img" />
+      </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html"
-                ><i class="fas fa-home"></i> Home</a
-              >
-            </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./index.html"><i class="fas fa-home"></i> Home</a>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-child"></i> School Life
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="./gallery.html"
-                    ><i class="fas fa-photo-film"></i> Gallery</a
-                  >
-                </li>
-              </ul>
-            </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-child"></i> School Life
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="./gallery.html"><i class="fas fa-photo-film"></i> Gallery</a>
+              </li>
+            </ul>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link active dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-school"></i> General
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="./enrollment-form.html"
-                    ><i class="fas fa-paperclip"></i> Enrollment Form</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./study-material.html"
-                    ><i class="fas fa-book"></i> Study Material</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-chalkboard-user"></i> Academics</a
-                  >
-                </li>
-              </ul>
-            </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fas fa-school"></i> General
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="./enrollment-form.html"><i class="fas fa-paperclip"></i> Enrollment
+                  Form</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./study-material.html"><i class="fas fa-book"></i> Study Material</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#"><i class="fas fa-chalkboard-user"></i> Academics</a>
+              </li>
+            </ul>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-newspaper"></i> News
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="./news.html"
-                    ><i class="fas fa-newspaper"></i> News</a
-                  >
-                </li>
-              </ul>
-            </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-newspaper"></i> News
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="./news.html"><i class="fas fa-newspaper"></i> News</a>
+              </li>
+            </ul>
+          </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-address-card"></i> About
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="./about-us.html"
-                    ><i class="fas fa-address-card"></i> About Us</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./our-team.html"
-                    ><i class="fas fa-users"></i> Our Team</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./alumni.html"
-                    ><i class="fas fa-award"></i> Alumni</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./hall-of-fame.html"
-                    ><i class="fas fa-user-graduate"></i> Hall of Fame</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./sponsors.html"
-                    ><i class="fas fa-money-check"></i> Sponsors</a
-                  >
-                </li>
-              </ul>
-            </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-address-card"></i> About
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="./about-us.html"><i class="fas fa-address-card"></i> About Us</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./our-team.html"><i class="fas fa-users"></i> Our Team</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./alumni.html"><i class="fas fa-award"></i> Alumni</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./hall-of-fame.html"><i class="fas fa-user-graduate"></i> Hall of
+                  Fame</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./sponsors.html"><i class="fas fa-money-check"></i> Sponsors</a>
+              </li>
+            </ul>
+          </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html"
-                ><i class="fas fa-address-book"></i> Contact</a
-              >
-            </li>
-          </ul>
-          <a href="#" target="_blank" id="login-btn" class="d-flex btn btn-dark"
-            ><i class="fas fa-sign-in-alt"></i> LogIn</a
-          >
-        </div>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
+          </li>
+        </ul>
+        <a href="#" target="_blank" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i>
+          LogIn</a>
       </div>
-    </nav>
-    <!-- 
+    </div>
+  </nav>
+  <!-- 
 
     ====================
     ====================
@@ -203,13 +139,13 @@
 
    -->
 
-    <section id="page-heading" data-page="enrollment-form">
-      <div class="container">
-        <h1><i class="fas fa-pen-clip"></i> Alumni Registration</h1>
-      </div>
-    </section>
+  <section id="page-heading" data-page="enrollment-form">
+    <div class="container">
+      <h1><i class="fas fa-pen-clip"></i> Alumni Registration</h1>
+    </div>
+  </section>
 
-    <!-- 
+  <!-- 
 
     ====================
     ====================
@@ -220,97 +156,119 @@
     ====================
 
    -->
-    <div class="container bg-light">
-      <form>
-        <div class="form-group my-3">
-          <label for="exampleFormControlInput1">Full Name *</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="Enter name here"
-          />
-        </div>
-        <div class="form-group my-3">
-            <label for="exampleFormControlInput1">Email address *</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
+  <div class="container bg-light">
+    <form>
+      <div class="form-group my-3">
+        <label for="exampleFormControlInput1">Full Name *</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter name here" />
+      </div>
+      <div class="form-group my-3">
+        <label for="exampleFormControlInput1">Email address *</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
 
-          <div class="form-group my-3">
-            <label for="exampleFormControlInput1">Phone Number *</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="Enter Phone Number"
-            />
+      <div class="form-group my-3">
+        <label for="exampleFormControlInput1">Phone Number *</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Phone Number" />
+      </div>
+      <div class="form-group my-3">
+        <label for="exampleFormControlInput1">Grade you completed at NextSchool *</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Grade" />
+      </div>
+      <div class="form-group my-3">
+        <label for="exampleFormControlTextarea1">Please send us your news</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+    </form>
+  </div>
+
+  <section id="footer">
+
+    <div class="top-footer">
+
+      <div class="container">
+        <div class="footer-col">
+          <img src="./images/brand.png" alt="brand Image">
+          <div>
+            <a href="#"><img src="./images/google.svg" alt=""></a>
+            <a href="#"><img src="./images/apple.svg" alt=""></a>
           </div>
-          <div class="form-group my-3">
-            <label for="exampleFormControlInput1">Grade you completed at NextSchool *</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="Enter Grade"
-            />
-          </div>
-        <div class="form-group my-3">
-          <label for="exampleFormControlTextarea1">Please send us your news</label>
-          <textarea
-            class="form-control"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
         </div>
-      </form>
+        <div class="footer-col">
+          <h2><i class="fas fa-contact-book"></i> Contact Us</h2>
+          <ul>
+            <li><a href="mailto:info@nextschool.co.za">info@nextschool.co.za</a></li>
+            <li><a href="tel:+27-737878798">+27-737878798</a></li>
+          </ul>
+          <ul>
+            <li>Office hours: 09:00 AM to 06:00 PM</li>
+            <li>Monday to Friday</li>
+          </ul>
+          <h2 class="mt-3"><i class="fas fa-location-dot"></i> GPS Coordinates</h2>
+          <ul>
+            <li>26’08’47.16″S</li>
+            <li>28’02’44.64″E</li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h2><i class="fas fa-map-location-dot"></i> Physical Address</h2>
+          <ul>
+            <li>3350</li>
+            <li>Phandamashango Street</li>
+            <li>Tshiawelo Ext.</li>
+            <li>Soweto, PO Box 118 Tshiawelo 1818</li>
+            <li>Johannesburg</li>
+          </ul>
+
+          <button class="button" onclick="window.location.href = './donate-us.html'">
+            <i class="fas fa-hand-holding-heart"></i> Sponsor Our School
+            <div class="button__horizontal"></div>
+            <div class="button__vertical"></div>
+          </button>
+        </div>
+      </div>
     </div>
 
-    <footer id="main-footer" class="bg-light">
-        <div class="container-fluid">
+    <div class="middle-footer">
+      <div class="container">
 
-            <div>
-                <img src="./images/brand.png" alt="brand-image">
-                <a href="" class="btn btn-dark"><i class="fas fa-download"></i> Download App</a>
-            </div>
+        <ul class="social-icons">
+          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-google"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fab fa-github"></i></a></li>
+        </ul>
 
-            <div>
-                <h2>Departments</h2>
-                <ul>
-                    <li><a href="#">Academics</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Career</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>School Policies</h2>
-                <ul>
-                    <li><a href="#">Help &amp; Supports</a></li>
-                    <li><a href="#">Counselling</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Exam Policies</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>About Our System</h2>
-                <ul>
-                    <li><a href="#">Infrastructure</a></li>
-                    <li><a href="#">Business</a></li>
-                    <li><a href="#">Branches</a></li>
-                    <li><a href="#">Sponsors</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Explore Services</h2>
-                <ul>
-                    <li><a href="#">Counselling</a></li>
-                    <li><a href="#">Libraries</a></li>
-                    <li><a href="#">Seminars</a></li>
-                    <li><a href="#">Books</a></li>
-                </ul>
-            </div>
+        <ul class="footer-menu">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about-us.html">About</a></li>
+          <li><a href="./enrollment-form.html">Apply</a></li>
+          <li><a href="./news.html">News</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./study-material.html">Study Material</a></li>
+          <li><a href="./gallery.html">Media</a></li>
+          <li><a href="./sponsors.html">Sponsors</a></li>
+          <li><a href="./alumni.html">Alumni</a></li>
+        </ul>
 
-        </div>
-    </footer>
-  </body>
+        <p>By accessing, using and/or interacting with NextSchool via its online and/or electronic platforms such as its
+          website and
+          application, you consent to the processing of your personal information by NextSchool. The Processing
+          of personal
+          information will be done in accordance with its POPI Policy.  Should you not consent, you must cease your
+          interaction
+          with NextSchool on any and every platform.</p>
+      </div>
+    </div>
+    <div class="bottom-footer">
+      <div class="container">
+        <p>Copyright &copy; 2021, NextSchool. <small>All rights reserved.</small></p>
+      </div>
+    </div>
+  </section>
+
+</body>
+
 </html>
