changed footer content

--- a/index.html
+++ b/index.html
@@ -506,13 +506,7 @@
           <li><a href="./alumni.html">Alumni</a></li>
         </ul>
 
-        <p>By accessing, using and/or interacting with NextSchool via its online and/or electronic platforms such as its
-          website and
-          application, you consent to the processing of your personal information by NextSchool. The Processing
-          of personal
-          information will be done in accordance with its POPI Policy.  Should you not consent, you must cease your
-          interaction
-          with NextSchool on any and every platform.</p>
+        <p>By accessing, using and/or interacting with the proprietary cloud software via its online and/or electronic platforms such as its website and application, you consent to the processing of your personal information. The Processing of personal information will be done in accordance with its POPI Policy.  Should you not consent, you must cease your interaction with this digital platform on any and every platform.</p>
       </div>
     </div>
     <div class="bottom-footer">
