Donation Amount Removed

--- a/donate-us.html
+++ b/donate-us.html
@@ -468,17 +468,17 @@
         <div class="col-12 mb-2 mt-3">
           <label for="message" class="form-label"><i class="fas fa-message"></i> We look forward to your
             message...</label>
-          <textarea class="form-control" rows="3">Enter Your Message Here...</textarea>
+          <textarea class="form-control" rows="3"></textarea>
         </div>
 
-        <div class="col-md-6 mb-2">
+        <!-- <div class="col-md-6 mb-2">
           <label for="amount" class="form-label"><i class="fas fa-coins"></i>Donation Amount*</label>
           <input type="text" class="form-control" placeholder="Enter Amount">
-        </div>
+        </div> -->
 
       </div>
 
-      <button class="btn btn-dark mx-auto"><i class="fas fa-hand-holding-heart"></i> Donate To The Trust </button>
+      <button class="btn btn-dark mx-auto"><i class="fas fa-hand-holding-heart"></i> Submit Form </button>
     </div>
   </section>
 
@@ -555,13 +555,13 @@
           <li><a href="./alumni.html">Alumni</a></li>
         </ul>
 
-        <p>By accessing, using and/or interacting with NextSchool via its online and/or electronic platforms such as its
+        <p>By accessing, using and/or interacting with NextSchool via its online and/or electronic platforms such as its
           website and
-          application, you consent to the processing of your personal information by NextSchool. The Processing
-          of personal
-          information will be done in accordance with its POPI Policy.  Should you not consent, you must cease your
+          application, you consent to the processing of your personal information by NextSchool. The Processing
+          of personal
+          information will be done in accordance with its POPI Policy. Should you not consent, you must cease your
           interaction
-          with NextSchool on any and every platform.</p>
+          with NextSchool on any and every platform.</p>
       </div>
     </div>
     <div class="bottom-footer">
